# idvproject

./: .gitignore  .pylintrc  LICENSE  Procfile  README.md  fly.toml  pyproject.toml
.github/workflows/: CI.yml
data/: bu2014_exp.csv  bu2014_inc.csv  bu2015_exp.csv  bu2015_inc.csv  bu2016_exp.csv  bu2016_inc.csv  bu2017_exp.csv  bu2017_inc.csv  bu2018_exp.csv  bu2018_inc.csv  bu2019_exp.csv  bu2019_inc.csv  bu2020_exp.csv  bu2020_inc.csv  bu2021_exp.csv  bu2021_inc.csv  bu2022_exp.csv  bu2022_inc.csv  bu2023_exp.csv  bu2023_inc.csv  bu2024_exp.csv  bu2024_inc.csv
src/: app.py  config.py  constants.py  data_functions.py  data_manager.py  help.py  index.py  link_collector.py  norm_factors.py  plot.py  translation_dict.py
src/utils/: col_scale_interpolator.py  ssl_checker.py  translation_util.py  translations_to_dict_file.py
