[tool.poetry]
name = "idvproject"
version = "0.1.0"
description = ""
authors = ["miahro <mikko.ahro@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.4"
pandas = "^2.2.2"
plotly = "^5.20.0"
dash = "^2.16.1"
bs4 = "^0.0.2"
python-dotenv = "^1.0.1"


[tool.poetry.group.dev.dependencies]
pylint = "^3.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
